# java-oxide

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  grab-missing-classes.py  rustfmt.toml  test.bat
gen-test/: java-oxide.toml
java-oxide/: Cargo.toml
java-oxide-gen/: Cargo.toml
java-oxide-gen/src/: config.rs
java-oxide-gen/src/emit/: mod.rs
src/: config.rs  main.rs
src/emit/: class_proxy.rs  classes.rs  fields.rs  java_proxy.rs  known_docs_url.rs  methods.rs  mod.rs  preamble-contents.rs  preamble.rs
src/identifiers/: method_mangling.rs
src/util/: generated_file.rs
